# apriltag_size

./: .gitignore  Question~
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
logs/apriltags/: build.check.067.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.071.log.stderr
logs/apriltagscpp/: build.make.000.log.stderr
logs/mrsd_ros_tutorials/: build.check.085.log.stderr  build.check.086.log.stderr  build.make.000.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.012.log.stderr  build.make.014.log.stderr  build.make.016.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.023.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.076.log.stderr  build.make.079.log.stderr  build.make.081.log.stderr  build.make.083.log.stderr  build.make.085.log.stderr  build.make.086.log.stderr  build.make.087.log.stderr  build.make.088.log.stderr  build.make.090.log.stderr  build.make.091.log.stderr  build.make.092.log.stderr  build.make.093.log.stderr  build.make.094.log.stderr  build.make.095.log.stderr  build.make.096.log.stderr  build.make.097.log.stderr  build.make.098.log.stderr  (+126 more)
src/: README.md  README.md~  readme.txt  readme.txt~  segmentation.cpp
src/segment_pcl/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_0.txt  package.xml  package.xml~  readme.txt
src/segment_pcl/src/: pcl_seg_node.cpp~  subscribe_pc_node.cpp
(+152 files in other folders)
